--- a/_config.yml
+++ b/_config.yml
@@ -69,10 +69,10 @@ social-network-links:
   rss: true
   email: "hanxiao_chen@brown.edu"
   facebook: chen.hanxiao.77
-  github: daattali
-  twitter: daattali
-  reddit: yourname
-#  linkedin: daattali
+  github: hanxiao-chen
+  #twitter: daattali
+  #reddit: yourname
+linkedin: hanxiao-chen-10796315a
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
