--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ share-links-active:
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-163913519-1"
 
 # Google Tag Manager ID
 #gtm: ""
